Fix Joystick Position on mobile

--- a/Web/www/css/style.css
+++ b/Web/www/css/style.css
@@ -34,8 +34,8 @@ body, span, button, h1, h2, h3, h4, h5, h6, p, ion-item, ion-title {
     height: auto;
     }
 .stick{
-padding-top:50%; 
-padding-left:50%; 
+	padding: 75% 0;
+    text-align: center;
 }
 	
 .size-12 { font-size: 12px; }
